# rust-utils

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
benches/: pattern_matching.rs
docs/: TESTING.md  examples.md  remap.md
src/: cli.rs  error.rs  fs.rs  lib.rs  main.rs
src/commands/: remap.rs
tests/: integration.rs  main_integration.rs
