[package]
name = "rust-utils"
version = "0.1.1"
edition = "2021"
description = "A collection of utilities for system administration and development workflows implemented in Rust"
authors = ["dgalbraith <dg@lbraith.io>"]
license = "MIT"
repository = "https://github.com/dgalbraith/rust-utils"
keywords = ["utilities", "system", "admin", "tools", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
nix = { version = "0.27", features = ["user", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"

[[bench]]
name = "pattern_matching"
harness = false
